	  - The minimumUIDNumber attribute is a branch configuration
	    option, not a global one (hence the 's/_GLOB_/_CONF_/g'
	    change).
	  - When creating a user or domain, include the root dn when
	    redirecting to the corresponding details page. If it isn't
	    included, we won't see/get all the branch defaults we might
	    need.
	    Closes bug 20
 
	GUI layout change
	  - Possibility to set a value in the domain branch saying we
	    automatically would like to create username (uid) and/or
	    email address. This is done with two new attributes added
	    to the phpQLAdminBranch objectclass. The attributes oid is:
		autoCreateUsername	1.3.6.1.4.1.8767.3.2.1.14
		autoCreateMailAddress	1.3.6.1.4.1.8767.3.2.1.15
	    Closes bugs 3, 4 and 5
	  - Added the possibility to allow/disallow user from viewing/administrating
	    the QmailLDAP/Controls information by adding a new attribute
	    to the phpQLAdminBranch objectclass. The attribute OID is:
		controlsAdministrator	1.3.6.1.4.1.8767.3.2.1.16
	    Closes bug 13
	  - Disable the showing of the icons 'Delivery properties',
	    'Mailbox properties' and 'User access' if we don't run in
	    advanced mode.
	    Closes bug 12
	  - Allow for setting a new branch default - Automatic username
	    prefix. This option is only visible in the domain/branch
	    details page if 'Automaticly generate username' is set to
	    true. Required a new attribute to the phpQLAdminBranch
	    objectclass. The OID is:
		userNamePrefix          1.3.6.1.4.1.8767.3.2.4.13

	Misc changes
	  - Configurable define in config.inc which dictate what user
	    (system account) ezmlm mailinglists is owned by.

phpQLAdmin 2.0.14 Release (jun 12 2003)
	Bug fixes
	  - Link to control_edit_attribute.php should include the MX host
	  - If we can't validate administrator, don't die with LDAP error,
	    return false (ie, admin is not valid).
	  - Maximum users for domain is just that 'FOR DOMAIN'! Not for